# skin_detector_node

./: CMakeLists.txt  package.xml
src/: hsv_area_selector.py  skin_detector_node.py
